add note about Mapbox

--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@ areas:
 <details>
   <summary>Click here to view map</summary>
   <img src="figures/all-inlets-map.png" class="map" loading="lazy">
+  <p>
+    The maps on this page were generated using <a href="https://www.mapbox.com">Mapbox Studio</a>.
+  </p>
 </details>
 
 <div id="averaging-choice" class="tab">
