Fix Hakai ERDDAP link

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ imageprefix: https://www.waterproperties.ca/bc-inlets/figures
 </p>
 <p id="source-description">
   Data is taken from the archives at <a href="https://www.waterproperties.org/osd_data_archive">waterproperties.ca</a> and the <a href="https://data.cioospacific.ca/erddap">Cioos Pacific</a> and
-  <a href="https://catalogue.cioos.ca/erddap">Hakai</a> ERDDAP servers.
+  <a href="https://catalogue.hakai.org/erddap">Hakai</a> ERDDAP servers.
 </p>
 <details>
   <summary>Click here to view map</summary>
